Оплата подписок; оптимизация кода
Добавлена возможность оплаты подписки;
Добавлена новая таблица для данных о счетах;
Убраны лишние try/catch
Методы в DBRequest и MessageController сделаны статическими
Удалено лишнее создание экземпляров классов

--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TG_Analytic_Bot
-@namespace TG_Analytic_Bot.Pages
+﻿@using AnalyticBot_Translator
+@namespace AnalyticBot_Translator.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
