--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TG_Analytic_Bot</title>
+    <title>@ViewData["Title"] - AnalyticBot_Translator</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/TG_Analytic_Bot.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/AnalyticBot_Translator.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">TG_Analytic_Bot</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">AnalyticBot_Translator</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - TG_Analytic_Bot - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - AnalyticBot_Translator - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
